# axum-log-stream

./: .env  Cargo.toml  README.md
src/: config.rs  main.rs  state.rs
src/handlers/: home.rs  log.rs  mod.rs  other.rs
src/partials/: header.rs  mod.rs
