[package]
name = "axum-log-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-to-html = "0.1"
anyhow = "1"
axum = "0.6"
bytes = "1.4"
dotenvy = "0.15"
maud = { version = "0.25", features = ["axum"] }
once_cell = "1.17"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
